--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
     "firebase": "^10.1.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-calendar-picker": "^7.1.4",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-maps": "^1.7.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.7",
+    "square": "^30.0.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
