--- a/app.json
+++ b/app.json
@@ -10,8 +10,11 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-	"image": "./assets/splash.png",
-	"backgroundColor": "#814750"
+      "image": "./assets/splash.png",
+      "backgroundColor": "#814750"
+    },
+    "android": {
+      "package": "pizza.cascadia.mobile"
     }
   }
 }
