--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.16",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/auth": "^18.3.0",
+    "@react-navigation/drawer": "^6.6.6",
     "@types/react": "~18.0.27",
     "expo": "^48.0.7",
+    "expo-checkbox": "^2.5.0",
+    "expo-cli": "^6.3.10",
     "expo-constants": "~14.2.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.2.0",
@@ -19,7 +23,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.14",
     "react-native-calendar-picker": "^7.1.4",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "^1.7.1",
